test/fail/fail02.lsp
(r 'A 'B '(<))
(r 'B 'C '(< =))
(r 'A 'C '(>))
(r_exist 'A 'B '(di));  - hier wird der Existenzquantor eingesetzt
